# adamvib-raytracer-simd

./: CMakeLists.txt  README.md  image.ppm
Header Files/: Camera.h  Camera.hpp  Light.h  Light.hpp  Material.h  Material.hpp  Object.h  Object.hpp  Plane.h  Plane.hpp  Ray.h  Ray.hpp  Scene.h  Scene.hpp  Sphere.h  Sphere.hpp  Vector3.h  Vector3.hpp
Source Files/: CMakeLists.txt  Camera.cpp  Light.cpp  Main.cpp  Material.cpp  Object.cpp  Plane.cpp  Ray.cpp  Scene.cpp  Sphere.cpp  Vector3.cpp
